[package]
name = "pyo3_export_pyclass"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
numpy = { version = "0.14", optional = true }

[dependencies.pyo3]
version = "0.14"
features = ["extension-module", "abi3", "abi3-py36", "multiple-pymethods"]
optional = true

[features]
default = []
python = ["pyo3", "numpy"]
python_module = ["python"]
