[package]
name = "python-package"
version = "0.1.0"
edition = "2018"

[lib]
name = "python_package"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3_export_pyclass = { path = "..", features = ["python"] }

[dependencies.pyo3]
version = "0.14"
features = ["extension-module", "abi3", "abi3-py36", "multiple-pymethods"]
